# 01-driver-i2c-spi

./: 01-driver-i2c-spi.md  Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: bus.rs  hal_mock.rs  i2c.rs  lib.rs  main.rs  spi.rs  uart.rs
src/sensors/: bme280.rs  mpu6050.rs
tests/: i2c_test.rs  spi_test.rs
